# libdl

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  PyNotebook.ipynb  README.md  Untitled.ipynb  main.cpp
include/: ActivationFunction.h  HelperFunctions.h  MTensor.h  ManageLoggers.h  NN.h  NeuralNetwork.h  ReluFunction.h  SigmoidFunction.h
include/ActivationFunction/: ActivationFunction.h  IdentityFunction.h  ReluFunction.h  SigmoidFunction.h  SoftmaxFunction.h  TanFunction.h  TanhFunction.h
include/Layer/: BaseLayer.h  ConvolutionLayer.h  ConvolutionalLayer.h  FullyConnectedLayer.h  Layer.h  MaxPoolLayer.h
include/LossFunction/: BinaryCrossEntropyLoss.h  CrossEntropyLoss.h  LossFunction.h  MultiClassLoss.h  MultiCrossEntropyLoss.h
include/OptimizationFunction/: Adam.h  OptimizationFunction.h  SimpleOptimizer.h
include/RandomInitialization/: DeterministicInitialization.h  HetalInitialization.h  RandomInitialization.h  SimpleRandomInitialization.h  UniformHeInitialization.h  UniformXavierInitialization.h  XavierInitialization.h
pybind/: MlibWrapper.cpp  PyNotebook.ipynb
src/: FullyConnectedLayer.cpp  HelperFunctions.cpp  ManageLoggers.cpp  NN.cpp  NeuralNetwork.cpp  ReluFunction.cpp  SigmoidFunction.cpp  pybindings.cpp
src/ActivationFunction/: IdentityFunction.cpp  ReluFunction.cpp  SigmoidFunction.cpp  SoftmaxFunction.cpp  TanFunction.cpp  TanhFunction.cpp
src/Layer/: ConvolutionLayer.cpp  ConvolutionalLayer.cpp  FullyConnectedLayer.cpp  MaxPoolLayer.cpp
src/LossFunction/: BinaryCrossEntropyLoss.cpp  CrossEntropyLoss.cpp  MultiClassLoss.cpp  MultiCrossEntropyLoss.cpp
src/OptimizationFunction/: Adam.cpp  SimpleOptimizer.cpp
src/RandomInitialization/: DeterministicInitialization.cpp  HetalInitialization.cpp  SimpleRandomInitialization.cpp  UniformHeInitialization.cpp  UniformXavierInitialization.cpp  XavierInitialization.cpp
tests/: TestActivations.cpp  TestConvLayer.cpp  TestFCLayer.cpp  TestInitialization.cpp  TestLossFunctions.cpp  TestNetwork.cpp  TestOptimizer.cpp  test-main.cpp  test.cpp  test_layers.cpp
